--- a/questionbank-service/src/test/resources/application.properties
+++ b/questionbank-service/src/test/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rc_questionbank
 spring.datasource.username=root
 spring.datasource.password=root
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #flyway.baseline-on-migrate=true #used if database has some already table
-spring.flyway.enabled=true 
+spring.flyway.enabled=false 
 spring.flyway.url=jdbc:mysql://127.0.0.1:3306/rc_questionbank
 spring.flyway.user=root
 spring.flyway.password=root
