New Entity added
  - Question Save and Question status is working

--- a/questionbank-service/src/main/resources/application.properties
+++ b/questionbank-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
 
+swagger.base.package=com.rc.questionbankservice.controller
+
